[package]
name = "starship-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
async-graphql = {version = "4.0.14", features = ["tracing", "chrono"]}
async-graphql-actix-web = "4.0.14"
bcrypt = "0.13.0"
chrono = "0.4.22"
dotenv = "0.15.0"
jwt = "0.16.0"
sea-orm = {version = "0.10.3", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros", "postgres-array"]}
tokio = "1.21.2"
uuid = "1.2.2"
