[package]
name = "playground"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "0.1.2"
log = "0.4.20"
leptos = { version = "0.5.4", features = ["csr"] }
toolbox_types = { path = "../toolbox_types" }
console_error_panic_hook = "0.1.7"
